[package]
name = "frb_plugin_tool"
version = "0.1.8"
edition = "2021"
authors = ["hlxsmail@gmail.com"]
license = "MIT OR Apache-2.0"
description = "dart rust frb 快速生成项目脚本"
readme = "README.md"
homepage = "https://github.com/mdddj/frb_plugin_tool"
repository = "https://github.com/mdddj/frb_plugin_tool"
keywords = ["dart", "plugin", "flutter", "frb", "rust"]
categories = ["command-line-utilities"]
include = ["/temp/**", "/src/**"]

[dependencies]
duct = "0.13.7"
futures = "0.3.30"
reqwest = { version = "0.12.5" }
tera = "1.19.1"
tokio = { version = "1.39.3", features = ["full"] }
