[package]
name = "frb_plugin_tool"
version = "0.2.4"
edition = "2021"
authors = ["hlxsmail@gmail.com"]
license = "MIT OR Apache-2.0"
description = "dart rust frb 快速生成项目脚本"
readme = "README.md"
homepage = "https://github.com/mdddj/frb_plugin_tool"
repository = "https://github.com/mdddj/frb_plugin_tool"
keywords = ["dart", "plugin", "flutter", "frb", "rust"]
categories = ["command-line-utilities"]
include = ["/temp/**", "/src/**"]

[dependencies]
duct = "0.13.7"
futures = "0.3.31"
reqwest = { version = "0.12.12" }
tera = "1.20.0"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
